--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,16 @@
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="js/photoswipe/photoswipe.css">
     <link rel="stylesheet" href="js/photoswipe/default-skin/default-skin.css">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-61938777-2"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-61938777-2');
+    </script>
+
 </head>
 
 <body>
