--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,13 @@
         <div class="grid-sizer"></div>
     </div>
 
+    <!-- Loading组件 -->
+    <div class="loading">
+        <b class="block"></b>
+        <b class="block"></b>
+        <b class="block"></b>
+    </div>
+
     <!-- Root element of PhotoSwipe. Must have class pswp. -->
     <div class="pswp" tabindex="-1" role="dialog" aria-hidden="true">
 
