--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
 </head>
 
 <body>
+    <div class="wrap-logo"><img src="./img/omygirls.png" alt="" class="logo"></div>
     <div class="grid">
         <div class="grid-sizer"></div>
     </div>
